--- a/smacofHC/smacofHO.Rmd
+++ b/smacofHC/smacofHO.Rmd
@@ -1,10 +1,10 @@
 ---
 title: |
     | Smacof at 50: A Manual
-    | Part 8: Gifi Smacofified
+    | Part 9: Gifi with Centroid Constraints Smacofified
 author: 
 - Jan de Leeuw - University of California Los Angeles
-date: '`r paste("Started April 13 2024, Version of",format(Sys.Date(),"%B %d, %Y"))`'
+date: '`r paste("Started June 24 2024, Version of",format(Sys.Date(),"%B %d, %Y"))`'
 output:
   bookdown::pdf_document2:
     latex_engine: lualatex 
